--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Cache-control" content="public">
 	<meta name=“google-site-verification” content=“ZchMMobOHNy-YGuU0QF3YSSbdGX2p3UvJXtwWhaOYto” />
-
-	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-129527857-1"></script><script>
 		window.dataLayer = window.dataLayer || [];
 		function gtag(){dataLayer.push(arguments);}
@@ -16,53 +14,44 @@
 		gtag('config', 'UA-129527857-1');
 	</script>
 
+	<script
+		src="https://code.jquery.com/jquery-3.3.1.js"
+		integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+		crossorigin="anonymous">
+	</script>
+
+	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+	
+	<script>
+
+		$(document).ready(function() {
+			$(".countdown").load("./partials/countdown.html");
+			$("footer").load("./partials/footer.html");
+			$(".navbar").load("./partials/navbar.html");
+		});
+
+	</script>
+
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="./js/countdown.js"></script>
+	<script type="text/javascript" src="./js/event.js"></script>
+
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
-	<link rel="stylesheet" href="styles.css">
 	<link rel="icon" type="image/png" href="img/fa-logo.png" />
+	<link rel="stylesheet" href="./styles.css">
+
 </head>
 
 <body>
-	<div class="logo">
-		<a class="" href="index.html">
-			<img src="img/nav_logo.png" width="200"  alt="">
-		</a>
-    </div>
-
-	<nav class="navbar navbar-expand-lg navbar-light">
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-
-		<div class="collapse navbar-collapse" id="navbarNav">
-			<ul class="navbar-nav">
-				<li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Register</a>
-        			<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          				<a class="dropdown-item" href="https://pearlhacks1.typeform.com/to/H6yqGu">Participant</a>
-          				<a class="dropdown-item" href="https://pearlhacks1.typeform.com/to/WRg32d">Mentor</a>
-          				<a class="dropdown-item" href="https://pearlhacks1.typeform.com/to/yhzSLh">Volunteer</a>
-        			</div>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="travel.html">Travel</a>
-				</li>
-
-				<li class="nav-item">
-					 <a class="navbar-brand" href="index.html">
-    					<img src="img/nav_logo.png" width="200"  alt="">
- 					 </a>
-				</li>
-
-     			<li class="nav-item">
-       			 	<a class="nav-link" href="schedule.html">Schedule</a>
-      			</li>
-    		 	<li class="nav-item">
-    		 		<a class="nav-link" href="faq.html">FAQ</a>
-    		 	</li>
-    		</ul>
-  		</div>
-	</nav>
+	<div class="countdown"></div>
+	<div class="logo">		
+ 		<a class="" href="index.html">		
+ 			<img src="img/nav_logo.png" width="200"  alt="">		
+ 		</a>		
+ 	</div>
+	<nav class="navbar navbar-expand-lg navbar-light"></nav>
 
 	<div class="home-bg">
 		<div class="row col-lg-10">
@@ -99,16 +88,7 @@
 
 	</div>
 
-	<footer class="footer">
-		<a href="https://www.facebook.com/pearlhackathon/" target="_blank"><i class="fab fa-facebook-f"></i></a>
-		<a href="https://github.com/pearlhacks" target="_blank"><i class="fab fa-github"></i></a>
-		<a href="mailto: hello@pearlhacks.com"><i class="far fa-envelope"></i></a>
-		<a href="https://twitter.com/PearlHacks" target="_blank"><i class="fab fa-twitter"></i></a>
-		<a href="https://www.instagram.com/pearlhacks/" target="_blank"><i class="fab fa-instagram"></i></a>
-	</footer>
+	<footer class="footer"></footer>
 
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
