--- a/faq.html
+++ b/faq.html
@@ -249,7 +249,7 @@
                             <h4>Venue Expectation</h4>
                         </div>
                          <div class="back">
-                            <h6>We do not allow alcohol, weapons, or illegal substances in our venues. Please do not bring these items to Pearl Hacks. In addition, please do not permanently modify or damage the rooms that we will be using. If you see something that needs immediate attention, please notify an event volunteer or message a director on Slack.</h6>
+                            <h6>We do not allow alcohol, weapons, or illegal substances in our venues. Please do not permanently modify or damage the rooms that we will be using. If you see something that needs immediate attention, please notify an event volunteer or message a director on Slack. Our venue is wheelchair accessible.</h6>
                          </div>
                     </div>
                 </div>
@@ -282,7 +282,7 @@
                             <h4>Food Requirement</h4>
                         </div>
                          <div class="back">
-                            <h6>Please don't take more food than you need.</h6>
+                            <h6>Please don't take more food than you need. Keep the environment in mind and don't use excessive disposables.</h6>
                          </div>
                     </div>
                 </div>
