--- a/schedule.html
+++ b/schedule.html
@@ -62,13 +62,28 @@
         </div>
 
         <div class="saturday float col-lg-8">
-            <h4 class="date">Feb.16, Saturday</h4>
+            <h4 class="date">Feb.15, Friday</h4>
             <div class="row calendar col-lg-10">
-                <div class="col-4 time"><h4>8:00am-9:30am</h4></div>
-                <div class="col-4 event"><h5>Registration, Breakfast</h5></div>
-                <div class="col-4 location"><h5>Rosenau Hall, Atrium</h5></div>
+                <div class="col-4 time"><h4>6:30pm</h4></div>
+                <div class="col-4 event"><h5>Buses Arrive</h5></div>
+                <div class="col-4 location"><h5>Sitterson</h5></div>
 
-                <div class="col-4 time"><h4>9:45am-10:45am</h4></div>
+                <div class="col-4 time"><h4>6:30pm</h4></div>
+                <div class="col-4 event"><h5>Dinner</h5></div>
+                <div class="col-4 location"><h5>Sitterson Lobby</h5></div>
+
+                <div class="col-4 time"><h4>7:00pm - 8:30pm</h4></div>
+                <div class="col-4 event"><h5>#IamRemarkable Google Workshop</h5></div>
+                <div class="col-4 location"><h5> Sitterson 014</h5></div>
+            </div>
+
+            <h4 class="date col-lg-12">Feb.16, Saturday</h4>
+            <div class="row calendar col-lg-10">
+                <div class="col-4 time"><h4>8:00am - 9:30am</h4></div>
+                <div class="col-4 event"><h5>Registration, Breakfast</h5></div>
+                <div class="col-4 location"><h5>Atrium, Michael Hooker Research Center</h5></div>
+
+                <div class="col-4 time"><h4>9:45am -10:45am</h4></div>
                 <div class="col-4 event"><h5>Opening Ceremony</h5></div>
                 <div class="col-4 location"><h5>Genome 100</h5></div>
 
@@ -76,37 +91,38 @@
                 <div class="col-4 event"><h5>Hacking Begins</h5></div>
                 <div class="col-4 location"><h5>Everywhere</h5></div>
 
-                <div class="col-4 time"><h4>11:00pm-1:00pm</h4></div>
+                <div class="col-4 time"><h4>11:00am - 1:00pm</h4></div>
                 <div class="col-4 event"><h5>Sponsorship Fair</h5></div>
-                <div class="col-4 location"><h5>Rosenau Hall, Atrium</h5></div>
+                <div class="col-4 location"><h5>Atrium, Michael Hooker Research Center</h5></div>
 
-                <div class="col-4 time"><h4>11:00am-11:30am</h4></div>
-                <div class="col-4 event"><h5>Hack101</h5></div>
+                <div class="col-4 time"><h4>11:00am - 11:30am</h4></div>
+                <div class="col-4 event"><h5>Hacking 101</h5></div>
                 <div class="col-4 location"><h5>Rosenau 133</h5></div>
 
-                <div class="col-4 time"><h4>11:30pm-12:00pm</h4></div>
+                <div class="col-4 time"><h4>11:30am - 12:00pm</h4></div>
                 <div class="col-4 event"><h5>Team Forming Event</h5></div>
                 <div class="col-4 location"><h5>Rosenau 133</h5></div>
 
-                <div class="col-4 time"><h4>12:00pm-2:00pm</h4></div>
+                <div class="col-4 time"><h4>12:00pm - 02:00pm</h4></div>
                 <div class="col-4 event"><h5>Lunch</h5></div>
-                <div class="col-4 location"><h5>Rosenau Hall, Atrium</h5></div>
+                <div class="col-4 location"><h5>Atrium, Michael Hooker Research Center</h5></div>
 
-                <div class="col-4 time"><h4>1:00pm-7:00pm</h4></div>
+                <div class="col-4 time"><h4>1:00pm - 7:00pm</h4></div>
                 <div class="col-4 event"><h5>Workshop</h5></div>
-                <div class="col-4 location"><h5>Rosenau 2301, 230</h5></div>
+                <div class="col-4 location"><h5>TBD</h5></div>
 
-                <div class="col-4 time"><h4>6:30pm-8:30pm</h4></div>
+                <div class="col-4 time"><h4>6:30pm - 8:30pm</h4></div>
                 <div class="col-4 event"><h5>Dinner</h5></div>
-                <div class="col-4 location"><h5>Rosenau Hall, Atrium</h5></div>
+                <div class="col-4 location"><h5>Atrium, Michael Hooker Research Center</h5></div>
 
-                <div class="col-4 time"><h4>8:00pm-10:00pm</h4></div>
-                <div class="col-4 event"><h5>Tech Talks</h5></div>
-                <div class="col-4 location"><h5>Rosenau 2301, 230</h5></div>
-
-                <div class="col-4 time"><h4>10:00pm-11:00pm</h4></div>
+                <div class="col-4 time"><h4>7:30pm -8:30pm</h4></div>
                 <div class="col-4 event"><h5>Surprise Event</h5></div>
                 <div class="col-4 location"><h5>Rosenau 133</h5></div>
+
+                <div class="col-4 time"><h4>8:30pm -10:30pm</h4></div>
+                <div class="col-4 event"><h5>Tech Talks</h5></div>
+                <div class="col-4 location"><h5>TBD</h5></div>
+
             </div>
         </div>
 
@@ -117,35 +133,34 @@
         <div class="sunday float">
             <h4 class="date">Feb.17, Sunday</h4>
             <div class="row col-lg-12">
-                <div class="side-graphics col-2">
-                </div>
+                <div class="side-graphics col-2"></div>
                 <div class="col-lg-8">
                     <div class="row calendar col-lg-10">
-                        <div class="col-4 time"><h4>1:00am-2:30am</h4></div>
+                        <div class="col-4 time"><h4>1:00am - 2:30am</h4></div>
                         <div class="col-4 event"><h5>Midnight Meal</h5></div>
-                        <div class="col-4 location"><h5>Rosenau Hall, Atrium</h5></div>
+                        <div class="col-4 location"><h5>Atrium, Michael Hooker Research Center</h5></div>
 
-                        <div class="col-4 time"><h4>7:00am-9:00am</h4></div>
+                        <div class="col-4 time"><h4>7:00am - 9:00am</h4></div>
                         <div class="col-4 event"><h5>Breakfast</h5></div>
-                        <div class="col-4 location"><h5>Rosenau Hall, Atrium</h5></div>
+                        <div class="col-4 location"><h5>Atrium, Michael Hooker Research Center</h5></div>
 
                         <div class="col-4 time"><h4>11:00am</h4></div>
-                        <div class="col-4 event"><h5>Submit project deadline</h5></div>
+                        <div class="col-4 event"><h5>Submission Deadline</h5></div>
                         <div class="col-4 location"><h5>Devpost</h5></div>
 
-                        <div class="col-4 time"><h4>11:00am-2:00pm</h4></div>
+                        <div class="col-4 time"><h4>11:00am - 2:00pm</h4></div>
                         <div class="col-4 event"><h5>Lunch</h5></div>
-                        <div class="col-4 location"><h5>Rosenau Hall, Atrium</h5></div>
+                        <div class="col-4 location"><h5>Atrium, Michael Hooker Research Center</h5></div>
 
-                        <div class="col-4 time"><h4>11:00am-11:30m</h4></div>
+                        <div class="col-4 time"><h4>11:00am - 11:30m</h4></div>
                         <div class="col-4 event"><h5>How to Demo Workshop</h5></div>
                         <div class="col-4 location"><h5>Rosenau 133</h5></div>
 
-                        <div class="col-4 time"><h4>12pm-2:30pm</h4></div>
+                        <div class="col-4 time"><h4>12pm - 02:30pm</h4></div>
                         <div class="col-4 event"><h5>Demo Fair</h5s></div>
-                        <div class="col-4 location"><h5>Rosenau Hall, Atrium</h5></div>
+                        <div class="col-4 location"><h5>Atrium, Michael Hooker Research Center</h5></div>
 
-                        <div class="col-4 time"><h4>3:00pm-4:00pm</h4></div>
+                        <div class="col-4 time"><h4>3:00pm - 4:00pm</h4></div>
                         <div class="col-4 event"><h5>Closing Ceremony</h5></div>
                         <div class="col-4 location"><h5>Genome 100</h5></div>
 
@@ -162,8 +177,10 @@
             <div class="side-graphics col-lg-2">
             </div>
             <div class="workshop float col-lg-8">
-                <h4 class="date">Workshops&Tech Talks</h4>
-                <h5>Coming Soon!</h5>
+                <h4 class="date">Tech Talks/Workshops</h4>
+                 <div class="row calendar col-lg-10">
+                    <h5>Coming Soon!</h5>          
+                 </div>
             </div>
             <div class="side-graphics col-lg-2">
                 <img src="img/schedule_side.png">
