--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </head>
 
 <body>
-    <div class="countdown"></div>
+    <!-- <div class="countdown"></div> -->
     <div class="logo">      
         <a class="" href="index.html">      
             <img src="img/nav_logo.png" width="200"  alt="">        
@@ -78,6 +78,149 @@
         Join us at this wonderful event!
     </div>
 
+    <div class="logistics">
+        <div class="subtitle">
+            <h2>Logistics</h2>
+        </div>
+        <div class="logistics_wrap col-lg-8 container">
+            <div class="basics">
+                <h4>The Basics</h4>
+                <h3>When?</h3>
+                <h6>8AM Saturday Feb 16 - 4PM Sunday Feb 17</h6>
+
+                <h3>Where</h3>
+                <h6>Michael Hooker Research Center, Gillings School of Global Public Health</h6>
+
+                <h3>What should I bring?</h3>
+                <h6>• For sleep: sleeping bag/blanket, pillow</h6>
+                <h6>• For hacking: laptop, charger, university ID</h6>
+                <h6>• For a two day event: change of clothes, toiletries, reusable waterbottle</h6>
+
+                <h3>Where should I park?</h3>
+                <h6>On the weekends, parking is free in most parking spaces at UNC. The following two parking decks are the closest to our venue:</h6>
+
+                <div class="mapouter">
+                    <h6><strong>Bell Tower Deck(nell Bell Tower): Bell Tower Drive, Chapel Hill, NC</strong></h6>
+                    <div class="gmap_canvas">
+                        <iframe id="gmap_canvas" src="https://maps.google.com/maps?q=Bell%20Tower%20Drive%20Chapel%20Hill%2C%20NC%2027514&t=&z=17&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0">
+                        </iframe>
+                        <a href="https://www.embedgooglemap.net"></a>
+                    </div>
+                </div>
+                        
+                <div class="mapouter">
+                    <h6><strong>McCauley Deck: (below FedEx Global Education Center)301 Pittsboro Street, Chapel Hill, NC</strong></h6>
+                    <div class="gmap_canvas">
+                        <iframe id="gmap_canvas2" src="https://maps.google.com/maps?q=Fedex%20global%20center&t=&z=17&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+                        <a href="https://www.embedgooglemap.net"></a>
+                    </div>
+                </div>
+            </div>
+            <div class="more">
+                <h4>And More</h4>
+                <h3>When is registration?</h3>
+                <h6>Registration begins at 8:00am on Saturday February 16th at Atrium of Michael Hooker Research Center. If you arrive on one of our buses you will be checked in upon arrival!</h6>
+
+                <h3>When is the lunch/sponsor fair/workshop/judging?</h3>
+                <h6>Please refer to our <a href="https://pearlhacks.com/schedule.html">schedule</a> page.</h6>
+
+                <h3>How do I keep updated during the event?</h3>
+                <h6>We will be communicating all important information and announcements through Slack so please join our Slack channel <a href="https://join.slack.com/t/pearlhacks2019/shared_invite/enQtNTM1NTE0MjAzOTEwLWNhYThjMWE4Zjg1OTJiOTI3NGQ2NmI1NTM1MzQ3MDg1MmZhNzY2MDQzMGJjMjgyNjVkYjYwMGZlZDEyZTc3YjM" target="blank">here</a>! This will also be the easiest way to find teams, get help ask questions, and more.</h6>
+
+                <h3>How do I submit my work?</h3>
+                <h6>All work need to submitted on our <a href="https://pearlhacks2019.devpost.com" target="blank">Devpost</a>. Specific submission information could be found <a href="https://docs.google.com/document/d/1L9h1jLzpt6x6orH4XEVSB4tfEu4dGJlegETJPRjdQNs/edit?usp=sharing" target="blank">here</a>.</h6>
+            </div>
+             <div class="more">
+                <h4>Prizes!</h4>
+                <div class="row">
+    
+                    <div class="prize col-lg-6">
+                        <h3>Pearl Hacks Prize: Empowering Minority/Underrepresented Communities</h3>
+                        <h6>First place:Bose Soundlink Bluetooth Speaker</h6>
+                        <h6>Second place: Fujifilm Instax Mini 9 Polaroid Camera + Film</h6>
+                        <h6>Third Place: Portable projector</h6>
+                    </div>
+
+                    <div class="prize col-lg-6">
+                        <h3>BNY Mellon: Best User Driven Design</h3>
+                        <h6>$150 Amazon Giftcard</h6>
+                    </div>
+
+                    <div class="prize col-lg-6">
+                        <h3>Bandwidth Hack: The Future of Instant Messaging</h3>
+                        <h6>$100 AMEX gift card, Google Home, Bandwidth swag (T-shirt, water bottle, moleskin notebook), sweet treats</h6>
+                    </div>
+
+                    <div class="prize col-lg-6">
+                        <h3 >Capital One: Best Financial Hack</h3>
+                        <h6>$300 Amazon Gift Card</h6>
+                    </div>
+                    <div class="prize col-lg-6">
+                        <h3>Credit Suisse: Best Use of Automation</h3>
+                        <h6>Sphero Mini</h6>
+                    </div>
+
+                    <div class="prize col-lg-6">
+                        <h3>Fidelity: Best Beginner Hack</h3>
+                        <h6>Fitbit</h6>
+                     </div>
+
+                    <div class="prize col-lg-6">
+                        <h3>Genesys: Best Use of AI/Machine Learning</h3>
+                        <h6>Amazon Echo Spot</h6>
+                    </div>
+
+                    <div class="prize col-lg-6">
+                        <h3>Google: Best Use of Google API<h3>
+                        <h6>Google Home Mini</h6>
+                    </div>
+
+                    <div class="prize col-lg-6">
+                        <h3>JP Morgan: Best Hack for Social Good<h3>
+                        <h6>Bose SoundLink Bluetooth Speakers</h6>
+                    </div>
+
+                    <div class="prize col-lg-6">
+                        <h3>Met Life: Most Innovative Hack<h3>
+                        <h6>MetLife MTU Swag - laptop bag, charging block, other MetLife swag, and gift card</h6>
+                    </div>
+
+                    <div class="prize col-lg-6">
+                        <h3>Microsoft: Best use of Azure DevOps<h3>
+                        <h6>Xbox Stereo Headset</h6>
+                    </div>
+
+                    <div class="prize col-lg-6">
+                        <h3>nCino: Why So Serious Hack<h3>
+                        <h6>Adafruit Gift Card + Surprise Fun Pack</h6>
+                    </div>
+
+                    <div class="prize col-lg-6">
+                        <h3>Red Ventures: Most Innovative Hack</h3>
+                        <h6>Amazon Alexa</h6>
+                    </div>
+
+                    <div class="prize col-lg-6">
+                        <h3>Rewriting The Code: Best Women Empowerment</h3>
+                        <h6>Echo Dots</h6>
+                    </div>
+
+                    <div class="prize col-lg-6">
+                        <h3>Splunk: Best use of Spunk</h3>
+                        <h6>Amazon Alexa</h6>
+                    </div>
+
+                    <div class="prize col-lg-6">
+                        <h3>CS+Social Good: Most Environmentally Aware Hack</h3>
+                        <h6>Metal straw, Nalgene water bottles, pins and stickers, canvas tote bag</h6>
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+    </div>
+
     <div class="sponsors">
         <div class="subtitle">
             <h2>Sponsors</h2>
@@ -88,7 +231,7 @@
                 <!-- Pearl Sponsors Goes Here ------------------- -->
                 <div class="sponsor_grid col-lg-1"></div>
 
-                <a class="sponsor_grid col-lg-5 col-md-6" target="blank" href="https://www.capitalone.com">
+                <a class="sponsor_grid col-lg-5 col-md-6" target="blank" href="https://campus.capitalone.com/">
                     <img src="./img/sponsors/P_Capital_One.png" alt="Capital One">
                 </a>
 
@@ -159,8 +302,7 @@
                     <img src="./img/sponsors/G_Splunk.png" alt="Splunk">
                 </a>    
 
-            <!--     <div class="sponsor_grid col-lg-2 col-md-2"></div>
- -->
+
                 <!-- Silver Sponsors Goes Here ------------------- -->
                 <a class="sponsor_grid col-lg-3 col-md-3" target="blank" href="https://www.bandwidth.com">
                     <img src="./img/sponsors/S_Bandwith.png" alt="Bandwidth">
@@ -182,6 +324,10 @@
                     <img src="./img/sponsors/S_Google.png">
                 </a>
 
+                <a class="sponsor_grid col-lg-3 col-md-3" target="blank" href="https://kaleido.io">
+                    <img src="./img/sponsors/S_Kaleido.png" alt="Kaleido">
+                </a>
+
                 <a class="sponsor_grid col-lg-3 col-md-3" target="blank" href="https://www.metlife.com">
                     <img src="./img/sponsors/S_MetLife.png" alt="MetLife">
                 </a>
@@ -194,23 +340,19 @@
                     <img src="./img/sponsors/S_SAS.png" alt="SAS">
                 </a>
 
-
-                <div class="sponsor_grid col-lg-2 col-md-2"></div>
-
-
                 <a class="sponsor_grid col-lg-3 col-md-3" target="blank" href="https://willowtreeapps.com">
                     <img src="./img/sponsors/S_Willow_Tree.png" alt="Willow Tree">
-                </a>
-
-                <a class="sponsor_grid col-lg-3 col-md-3" target="blank" href="https://rewritingthecode.org/">
-                    <img src="./img/sponsors/S_Rewriting_The_Code.png" alt="Rewriting The Code">
                 </a>
 
                 <a class="sponsor_grid col-lg-3 col-md-3" target="blank" href="https://renci.org/">
                     <img src="./img/sponsors/S_Renci.png" alt="Renci">
                 </a>
 
-                <div class="sponsor_grid col-lg-1 col-md-1"></div>
+                 <a class="sponsor_grid col-lg-3 col-md-3" target="blank" href="https://rewritingthecode.org/">
+                    <img src="./img/sponsors/S_Rewriting_The_Code.png" alt="Rewriting The Code">
+                </a>
+
+
 
                 <!-- Extra Sponsors Goes Here ------------------- -->
                 <div class="sponsor_grid col-lg-4 col-md-4"></div>
